service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: production
spec:
  selector:
    app: admin
  ports:
  - port: 80
    targetPort: 80
